# axiyon

./: .env.example  .gitignore  .migration-token.local  CONTRIBUTING.md  CUsersHPAppDataLocalTempvlogs.json  LICENSE  README.md  UsersHPAppDataLocalTemphealth-db.json  auth.config.ts  auth.ts  drizzle.config.ts  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: agent-icon.tsx  dashboard-shell.tsx  live-activity.tsx  markdown.tsx  nav.tsx  providers.tsx
docs/: INTEGRATIONS_SETUP.md  SETUP_OAUTH.md  STATUS_2026-05-09.md  api-reference.md  architecture.md  brand-guide.md  deployment.md  financial-model.md  go-to-market.md  hiring-plan.md  investor-memo.md  manifesto.md  openapi.yaml  pitch-deck.md  product-roadmap.md  security.md
examples/: deal-flow.yaml  monthly-close.yaml
legacy/: Makefile  agents.html  company.html  product.html
legacy/backend/: .env.example  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
legacy/backend/alembic/: env.py
legacy/backend/alembic/versions/: 20260508_0001_initial_schema.py
legacy/backend/src/axion/: __init__.py  config.py  deps.py  main.py
legacy/backend/src/axion/agents/: __init__.py  base.py  catalog.py  registry.py
legacy/backend/src/axion/agents/instances/: atlas_cfo.py  codex_legal.py  generic.py  iris_sdr.py  nova_recruiter.py  sage_support.py
legacy/backend/src/axion/api/: __init__.py
legacy/backend/src/axion/api/v1/: agents.py  audit.py  auth.py  billing.py  integrations.py  memory.py  orgs.py  tasks.py  webhooks.py  workflows.py
legacy/backend/src/axion/core/: __init__.py  audit.py  auth.py  rbac.py
legacy/backend/src/axion/db/: __init__.py  base.py  session.py
legacy/backend/src/axion/llm/: __init__.py  router.py
legacy/backend/src/axion/llm/providers/: __init__.py  anthropic_provider.py  base.py  mistral_provider.py  openai_provider.py
legacy/backend/src/axion/memory/: __init__.py  embeddings.py  kg.py  store.py
legacy/backend/src/axion/models/: __init__.py  agent.py  audit.py  billing.py  integration.py  memory.py  org.py  task.py  user.py  workflow.py
legacy/backend/src/axion/orchestrator/: __init__.py  engine.py  replay.py  router.py
legacy/backend/src/axion/schemas/: __init__.py  agent.py  auth.py  org.py  task.py  workflow.py
legacy/backend/src/axion/tools/: __init__.py  registry.py
legacy/backend/src/axion/tools/integrations/: __init__.py  apollo.py  calendar.py  docusign.py  email.py  github.py  kb.py  linear.py  linkedin.py  logs.py  model_predict.py  pennylane.py  quickbooks.py  salesforce.py  slack.py  stripe_tool.py  zendesk.py
legacy/backend/src/axion/workers/: celery_app.py
legacy/backend/tests/: conftest.py  test_agents.py  test_audit.py  test_auth.py  test_health.py  test_memory.py  test_orchestrator.py
legacy/cli/: README.md  pyproject.toml
legacy/cli/src/axion_cli/: __init__.py  main.py
legacy/sdk/python/: README.md  pyproject.toml
legacy/sdk/python/axion/: __init__.py  client.py  errors.py  workflow.py
legacy/sdk/python/axion/resources/: __init__.py  agents.py  audit.py  memory.py  tasks.py  workflows.py
lib/: approvals.ts  audit.ts  crypto.ts  utils.ts
(+203 files in other folders)
