[project]
name = "axion-cli"
version = "1.0.0"
description = "Axion command-line interface."
authors = [{ name = "Axion Labs SAS", email = "engineering@axion.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "axion>=1.0.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "PyYAML>=6.0.2",
]

[project.scripts]
axion = "axion_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axion_cli"]
