[project]
name = "axion"
version = "1.0.0"
description = "Official Python SDK for Axion — the OS of the autonomous enterprise."
authors = [{ name = "Axion Labs SAS", email = "engineering@axion.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
]

[project.urls]
Homepage = "https://axion.ai"
Documentation = "https://docs.axion.ai/python"
Source = "https://github.com/axion-labs/sdk-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["axion"]
